--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,19 @@
+/* INITIALIZE */
+
+html, body {
+    font-family: Helvetica;
+    font-size: 22px;
+    color: seashell;
+    background: #000;
+    opacity: .9;
+    text-align: center;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 /* GLOBAL STYLES */
