--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,20 @@ body {
 
 #header {
     background-color:#000;
+    height: 60px;
+    color:#fff
+}
+
+#header h4 {
+    margin: 0;
+    font-size: 25px;
+    padding-left: 0.5em;
+    padding-top: 0.5em;
+}
+
+/* Footer styles */
+
+#footer {
+    background-color:#000;
+    color:#fff;
 }
