--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ body {
     padding-top: 0.5em;
 }
 
+/* Main styles */
+
+#banner {
+    height: 200px;
+    background: lightgrey;
+}
+
 /* Footer styles */
 
 #footer {
@@ -29,4 +36,6 @@ body {
     color:#fff;
     padding-top: 0.1em;
     padding-bottom: 0.1em;
+    position: relative;
+    bottom: 0;
 }
