--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,16 @@ body {
 #banner {
     height: 200px;
     background: lightgrey;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+#banner h1 {
+    margin: 0;
 }
 
 /* Footer styles */
