--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 #banner {
     height: 200px;
-    background: url("./img/bannerBg.jpg");
+    background: url("../img/bannerBg.jpg");
     text-align: center;
     display: flex;
     flex-direction: column;
