--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,13 @@ body {
 
 #banner h1 {
     margin: 0;
+    color: #FFF;
+    font-size: 2.5em;
+}
+
+#banner h3 {
+    color: #FFF;
+    font-size: 1.4em;
 }
 
 /* Footer styles */
