--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,10 @@ body {
     font-size: 1.4em;
 }
 
-#mainContainer {
-    width: 100%;
-}
-
 #main {
     width: 60%;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* Footer styles */
