--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
     background-color:#000;
     height: 60px;
     color:#fff;
+    position: fixed;
+    width: 100%;
 }
 
 #header .logoText {
@@ -80,4 +82,8 @@ body {
     padding-bottom: 0.1em;
     position: relative;
     bottom: 0;
+}
+
+.copyright {
+    text-align: center;
 }
