--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,13 @@ p {
     font-family: 'Ubuntu';
 }
 
+#contactForm input {
+    margin-bottom: 1.5em;
+    margin-top: 0.3em;
+    padding: 5px;
+    font-size: 16px;
+}
+
 /* Footer styles */
 
 #footer {
@@ -110,6 +117,12 @@ p {
     padding-bottom: 0.1em;
     position: relative;
     bottom: 0;
+}
+
+#footer ul {
+    list-style-type: none;
+    text-align: center;
+    padding-left: 0;
 }
 
 #footer a {
