--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ p {
 #navInner a {
     color: #FFF;
     text-decoration: none;
+    margin-top: 1.1em;
 }
 
 /* Main styles */
@@ -145,9 +146,27 @@ p {
     }
 }
 
+.projectItem {
+    width: 30%;
+}
+
 .projectItem p {
     margin: 0 auto !important;
     width: 66% !important;
+    padding-bottom: 1.6em;
+}
+
+.projectButton {
+    text-decoration: none;
+    color: #8B0000;
+    border: 1px solid #8B0000;
+    transition: background-color 500ms ease-out, color 500ms ease-out;
+}
+
+.projectButton:hover {
+    cursor: pointer;
+    background: #8B0000;
+    color: #FFF;
 }
 
 #contactForm input {
