--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,14 @@ p {
     margin-right: auto;
 }
 
+.sectionIntro {
+    font-size: 1.1em;
+}
+
 #about p {
     width: 60%;
     margin: 2em auto;
+    font-size: 1.1em;
 }
 
 #projectBg {
@@ -173,6 +178,10 @@ p {
     cursor: pointer;
     background: #8B0000;
     color: #FFF;
+}
+
+#contactForm {
+    margin-top: 3em;
 }
 
 #contactForm input {
