--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ html {
     scroll-behavior: smooth;
 }
 
+#top, #about, #projects, #contact {
+    padding-top: 70px;
+    margin-top: -70px;
+}
+
 body {
     width: 100%;
     height: 100%;
