--- a/css/style.css
+++ b/css/style.css
@@ -342,4 +342,17 @@ input#submitButton {
 .resultBox {
     border: 2px solid #8B0000;
     display: none;
+    height: 50px;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#quoteButton {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+#fortuneButton {
+    margin-bottom: 2em;
 }
