--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,8 @@ input#submitButton {
 
 #quoteText {
     color: #000;
-    font-size: 2em;
+    font-size: 1.2em;
+    margin: 0.4em;
 }
 
 #quoteButton {
