--- a/css/style.css
+++ b/css/style.css
@@ -357,8 +357,12 @@ input#submitButton {
 #quoteButton {
     margin-top: 2em;
     margin-bottom: 2em;
+    font-size: 0.9em;
+    padding: 0.3em;
 }
 
 #fortuneButton {
     margin-bottom: 2em;
+    font-size: 0.9em;
+    padding: 0.3em;
 }
