--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,7 @@ input#submitButton {
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
     justify-content: center;
+    border: 2px solid #8B0000;
 }
 
 #calcInnerContainer button {
