--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,8 @@ input#submitButton {
 #calcOutput {
     grid-column: span 4;
     border-bottom: 2px solid #8B0000;
+    text-align: right;
+    font-size: 2em;
 }
 
 #calcBtnClear {
